--- a/src/DemoAPI/DemoAPI/appsettings.json
+++ b/src/DemoAPI/DemoAPI/appsettings.json
@@ -8,5 +8,6 @@
   },
   "AllowedHosts": "*",
   "CosmosEndPointUri": "",
-  "CosmosPrimaryKey": ""
+  "CosmosPrimaryKey": "",
+  "ExternalEndpoint": "https://www.bing.com/search?q=Azure"
 }
