--- a/src/DemoAPI/DemoAPI/appsettings.json
+++ b/src/DemoAPI/DemoAPI/appsettings.json
@@ -9,5 +9,5 @@
   "AllowedHosts": "*",
   "CosmosEndPointUri": "",
   "CosmosPrimaryKey": "",
-  "ExternalEndpoint": "https://www.bing.com/search?q=Azure"
+  "ExternalEndpoint": "https://api.ipify.org?format=json"
 }
